# tw-stac

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.vim/: coc-settings.json
src/: create_collection.py  create_stac_items.py  ingest_to_pgstac.py  ingest_usgs_dem_to_pgstac.py  main.py
tw_stac/: __init__.py  config.py  deploy.py  ingest_to_pgstac.py  kubernetes.py
usgs_dem_stac/: __init__.py
