[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tw-stac"
version = "0.1.0"
description = "Helpers to create and deploy Spatio-Temporal Asset Catalogs (STAC)"
authors = [{name = "Jesse Anderson", email = "jesse.anderson@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=33.1.0",
    "kubernetes-stubs-elephant-fork>=33.1.0",
    "obstore>=0.7.1",
    "rio-stac>=0.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.hatch.build.targets.wheel]
packages = ["tw_stac"]

[tool.ruff.lint]
# D enables all `pydocstyle` rules
# I enables all `isort` rules
# ANN enables all type `annotations` rules
select = ["D", "I", "ANN"]

# disable `D417`, required documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D", "ANN"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=tw_stac"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tw_stac"]

[tool.coverage.report]
exclude_lines = [
]

[tool.pyright]
typeCheckingMode = "strict"
